--- a/templates/logged_in.html
+++ b/templates/logged_in.html
@@ -12,7 +12,7 @@
     <body>
         <div class="container" id="main">
 
-        <h1><a href="{{ url_for('index') }}">Pastebin [Vulnerable Web Application]</a></h1>
+        <h1><a href="{{ url_for('index') }}">Pastebin</a></h1>
         <div class="container" id="content" style="margin-top: 5%;">
 
         <h2>Submit paste</h2>
@@ -32,7 +32,7 @@
         <h2>Paste</h2>
         {% for element in paste %}
         <p>Id: {{ element[0] }} | Private: {{ element[2] }} | Made by: {{ element[3] }}</p>
-        <p>{{ element[1]|safe }}</p>
+        <p>{{ element[1] }}</p>
         {% endfor %}
 
         <h2>Your Pastes</h2>
@@ -43,7 +43,7 @@
         <p>User: {{ user }}</p>
 
         <p><a href="{{ url_for('logout') }}">Log out</a></p>
-        
+
         </div>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
